gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring
  labels:
    app: gatus
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: gatus
